recursion.cons.lessons.recursion.cons.Concat.scala.error
concat:2: error: type mismatch;
 found   : List[Int]
 required: Int
  return l1::l2
           ^